--- a/andrea d'ortenzio.html
+++ b/andrea d'ortenzio.html
@@ -108,7 +108,7 @@
         <div class="Nitamensaje" >
 
                 <div>
-                    <h2 class="tnita">Andre D'Ortenzio</h1>
+                    <h2 class="tnita">Andrea D'Ortenzio</h1>
                         <div class="mnita">
                             <p >
                                 Querida Meri, 
