--- a/index.html
+++ b/index.html
@@ -338,6 +338,14 @@
     <button onclick="showPasswordPrompt('Mónica Fernández')">Mónica Fernández</button>
 </div>
 
+<!-- Rosamaria Farrer-->
+<div class="carousel-item" data-name="Mónica Fernández">
+    <div class="contenedorimg">
+        <img src="./MÓNICA FERNÁNDEZ.jpg" alt="Imagen de Rosamaria Farrer">
+    </div>
+    <button onclick="showPasswordPrompt('Rosamaria Farrer')">Rosamaria Farrer</button>
+</div>
+
 <!-- Fran y Dani -->
 <div class="carousel-item" data-name="Fran y Dani">
     <div class="contenedorimg">
