--- a/index.html
+++ b/index.html
@@ -628,6 +628,7 @@
                     "Tío Richard y Familia": { password: 'New Jersey', hint: 'Tu tío Richard y su familia viven en...' },
                     "Profe Diana": { password: 'Piano', hint: 'La profe Dina te daba clases de...' },
                     "Alfonso Rodríguez": { password: 'Maria', hint: '¿Como te llamas?' },
+                    "Rosamaria Farrer": { password: 'Abuela', hint: '¿Soy la...de victor?' },
                     "Angels Ortiz": { password: 'Leche de almendras', hint: '¿Que leche tengo lista para ti siempre en casa?' },
                     "Omar Pérez": { password: 'Shakira', hint: '¿A que cantante hueles con tu colonia?' },
                     "Alejo Trias": { password: 'Alexander', hint: '¿Hello, I’m British, what’s my name?' },
