--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 <!-- Rosamaria Farrer-->
 <div class="carousel-item" data-name="Mónica Fernández">
     <div class="contenedorimg">
-        <img src="./MÓNICA FERNÁNDEZ.jpg" alt="Imagen de Rosamaria Farrer">
+        <img src="./rosamaria.jpg" alt="Imagen de Rosamaria Farrer">
     </div>
     <button onclick="showPasswordPrompt('Rosamaria Farrer')">Rosamaria Farrer</button>
 </div>
