--- a/index.html
+++ b/index.html
@@ -652,8 +652,8 @@
                     "Daniela Ortega y familia": { password: 'Malta', hint: 'Es tu prima que vive en Croacia o Malta?' },
                     "Luisfer Ortega y familia": { password: 'Julián', hint: 'El hijo menor de tu primo Luisfer se llama...' },
                     "Alejandro Mercader y flia": { password: 'Camila', hint: 'El nombre de la hija adolescente de  Alejandro Mercader y su esposa Susana, es Ignacia o Camila' },
-                    "Maripau Carrillo": { password: 'mama', hint: 'Es una amiga colombiana de tío Luchi o mama?' },
-                    "Mónica Fernández": { password: 'mama', hint: 'Es una amiga de mama o de papa?' },
+                    "Maripau Carrillo": { password: 'mamá', hint: 'Es una amiga colombiana de tío Luchi o mamá?' },
+                    "Mónica Fernández": { password: 'mamá', hint: 'Es una amiga de mamá o de papa?' },
                     "María Rosa Ardila": { password: 'Daniela, Mariana y Valentina', hint: 'Amiga colombiana de mamá cuyas hijas se llaman Daniela, Mariana y Valentina o Carolina, Martha y Valeria?' },
                     "Katia Rodríguez": { password: 'SEK Internacional', hint: 'Amiga colombiana de mamá cuyo hijo Julián Tobar, estudió el Bachillerato Internacional en el Colegio SEK Internacional o en el Red Land School' },
                     "Lina Torres": { password: 'Guajira', hint: 'Es una amiga de mamá que nació en Madrid o Guajira?' },
@@ -671,7 +671,7 @@
                     "Tía Mariela": { password: 'TÍIS', hint: 'A tía Mariela le dices:' },
                     "Tío Fer": { password: 'Junior de Barranquilla', hint: 'Tío Fer es fanático a morir del equipo...' },
                     "Familia Gómez Ahumada": { password: 'Huechuraba', hint: 'La comuna en donde viven el compadre Marcelo y la comadre Osiris con sus hijas, es Providencia o Huechuraba' },
-                    "Mario Meza": { password: 'mama', hint: ' Es un querido amigo chileno de papá o mama?' },
+                    "Mario Meza": { password: 'mamá', hint: ' Es un querido amigo chileno de papá o mamá?' },
                     "Guillermo Talep y Ximena López": { password: 'conejo', hint: ' La mascota que, estando pequeña, Guillermo te ayudó a encontrar en el jardín de nuestra primera casa en Santiago, fue un gato o un conejo?' },
                     "Magaly": { password: 'Mario Meza', hint: ' Es la esposa de Mario Meza o Amir Rayá' },
                     "Diana Maldonado": { password: 'Susana', hint: 'Es una amiga colombiana de mamá cuya hija se llama Carolina o Susana?' },
