--- a/index.html
+++ b/index.html
@@ -538,12 +538,12 @@
     <button onclick="showPasswordPrompt('Luismi')">Luismi</button>
 </div>
 
-<!-- Magaly -->
-<div class="carousel-item" data-name="Magaly">
+<!-- Magaly De Meza -->
+<div class="carousel-item" data-name="Magaly De Meza">
     <div class="contenedorimg">
-        <img src="./Magaly de Meza.jpg" alt="Imagen de Magaly">
+        <img src="./Magaly de Meza.jpg" alt="Imagen de Magaly De Meza">
     </div>
-    <button onclick="showPasswordPrompt('Magaly')">Magaly</button>
+    <button onclick="showPasswordPrompt('Magaly De Meza')">Magaly De Meza</button>
 </div>
 
 <!-- Tío Fer -->
@@ -673,7 +673,7 @@
                     "Familia Gómez Ahumada": { password: 'Huechuraba', hint: 'La comuna en donde viven el compadre Marcelo y la comadre Osiris con sus hijas, es Providencia o Huechuraba' },
                     "Mario Meza": { password: 'mamá', hint: ' Es un querido amigo chileno de papá o mamá?' },
                     "Guillermo Talep y Ximena López": { password: 'conejo', hint: ' La mascota que, estando pequeña, Guillermo te ayudó a encontrar en el jardín de nuestra primera casa en Santiago, fue un gato o un conejo?' },
-                    "Magaly": { password: 'Mario Meza', hint: ' Es la esposa de Mario Meza o Amir Rayá' },
+                    "Magaly De Meza": { password: 'Mario Meza', hint: ' Es la esposa de Mario Meza o Amir Rayá' },
                     "Diana Maldonado": { password: 'Susana', hint: 'Es una amiga colombiana de mamá cuya hija se llama Carolina o Susana?' },
                     "Yenifer Rojas": { password: 'venezolano', hint: 'Es la Asesora del Hogar de la casa familiar en Chile. Ella es de origen venezolano o canadiense?' },
                     "Mónica Ramírez": { password: 'Universidad Del Desarrollo', hint: 'Es una amiga chilena de mamá, que fue compañera de MBA en la Universidad  Andrés Bello o en la Universidad Del Desarrollo?' },
