--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                     "Kelly Jiménez": { password: 'trapear el piso', hint: '¿lo que más me gustaba hacer era trapear el piso o ensuciar el piso?' },
                     "Andrea D'Ortenzio": { password: 'el baile de la abeja', hint: 'como se llama nuestro baile?' },
                     "Papi Lucho": { password: 'Toby', hint: 'Papi Lucho siempre te ha pedido una foto de...' },
-                    "Tía Genny": { password: 'Mi Galletica Can Can', hint: 'Tía Genny te llama cariñosamente' },
+                    "Tía Genny": { password: 'Mi Galletica Can Can', hint: '¿Tía Genny te dice Mi Galletica Can Can o Sobrinita Linda?' },
                     "Luismi": { password: 'PAPA', hint: 'Como nos llamamos el uno al otro...' },
                     "Anel": { password: 'Katty', hint: '¿Como se llamaba la última novia de Anel?' },
                     "Tío Luchi": { password: 'TIITO', hint: '¿Como me llamas tú cariñosamente?' },
@@ -647,7 +647,7 @@
                     "Mami": { password: 'Mi Chiquitina hermosa', hint: 'Te llamio Mi Chiquitina hermosa o Mi princesa bella' },
                     "Beverly y familia": { password: 'Las Negritas Puloys', hint: ' Beverly es bailarina del grupo folklórico...' },
                     "Darlys": { password: 'baja', hint: '¿Darlys es de estatura muy alta o muy baja?' },
-                    "Alejo y Katha": { password: 'la Universidad Del Desarrollo', hint: 'Alejo y Katha se conocieron en Chile, en la Universidad Adolfo Ibáñez o la Universidad Del Desarrollo' },
+                    "Alejo y Katha": { password: 'Universidad Del Desarrollo', hint: 'Alejo y Katha se conocieron en Chile, en la Universidad Adolfo Ibáñez o la Universidad Del Desarrollo' },
                     "Sebas Nordewier": { password: 'Londres', hint: '¿Es tu primo que estudia en Utrecht (Países Bajos ) y que nació en Londres o en Amsterdam?' },
                     "Daniela Ortega y familia": { password: 'Malta', hint: 'Es tu prima que vive en Croacia o Malta?' },
                     "Luisfer Ortega y familia": { password: 'Julián', hint: 'El hijo menor de tu primo Luisfer se llama...' },
@@ -655,8 +655,8 @@
                     "Maripau Carrillo": { password: 'mamá', hint: 'Es una amiga colombiana de tío Luchi o mamá?' },
                     "Mónica Fernández": { password: 'mamá', hint: 'Es una amiga de mamá o de papa?' },
                     "María Rosa Ardila": { password: 'Daniela, Mariana y Valentina', hint: 'Amiga colombiana de mamá cuyas hijas se llaman Daniela, Mariana y Valentina o Carolina, Martha y Valeria?' },
-                    "Katia Rodríguez": { password: 'SEK Internacional', hint: 'Amiga colombiana de mamá cuyo hijo Julián Tobar, estudió el Bachillerato Internacional en el Colegio SEK Internacional o en el Red Land School' },
-                    "Lina Torres": { password: 'Guajira', hint: 'Es una amiga de mamá que nació en Madrid o Guajira?' },
+                    "Katia Rodríguez": { password: 'Colegio SEK Internacional', hint: 'Amiga colombiana de mamá cuyo hijo Julián Tobar, estudió el Bachillerato Internacional en el Colegio SEK Internacional o en el Red Land School' },
+                    "Lina Torres": { password: 'La Guajira', hint: 'Es una amiga de mamá que nació en Madrid o La Guajira?' },
                     "María Clara Lafaurie": { password: 'Barranquilla', hint: 'Amiga colombiana de mamá que ahora vive en Canadá pero que nació en Bogotá o Barranquilla?' },
                     "Jorge Tapia": { password: 'Simón', hint: 'Es un querido amigo de mamá y papá, cuyo hijo se llama Simón o Pedro?' },
                     "Jorge Santiago": { password: 'chilena', hint: 'Es una amigo de mamá de nacionalidad brasilera o chilena?' },
@@ -668,7 +668,7 @@
                     "Nicolás Forcadell Bordoy": { password: 'Arepas', hint: '¿Qué me tienes que cocinar algún día?' },
                     "Tía Norbely": { password: 'Luisfer', hint: 'Tía Norbely es la mamá de tu primo...' },
                     "Erik Helbek": { password: 'marica', hint: '¿Como nos llamamos?' },
-                    "Tía Mariela": { password: 'TÍIS', hint: 'A tía Mariela le dices:' },
+                    "Tía Mariela": { password: 'menor', hint: '¿Tía Mariela es la hermana mayor o menor de mamá?' },
                     "Tío Fer": { password: 'Junior de Barranquilla', hint: 'Tío Fer es fanático a morir del equipo...' },
                     "Familia Gómez Ahumada": { password: 'Huechuraba', hint: 'La comuna en donde viven el compadre Marcelo y la comadre Osiris con sus hijas, es Providencia o Huechuraba' },
                     "Mario Meza": { password: 'mamá', hint: ' Es un querido amigo chileno de papá o mamá?' },
