--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                     "Nita Santiago": { password: 'girl', hint: 'Que palabra usamos para dirigirnos una a la otra' },
                     "Sergi García": { password: 'dos besos', hint: 'como me saludas' },
                     "Carls Asensio": { password: 'aguacate y huevo', hint: 'para enamorarme, me hiciste una tostada con...' },
-                    "Tío Richard y Familia": { password: 'New Jersey', hint: 'Tu tío Richard y su familia viven en...' },
+                    "Tío Richard y Familia": { password: 'Estados Unidos', hint: '¿Tío Richard vive en Estados Unidos o en Uruguay?' },
                     "Profe Diana": { password: 'Piano', hint: 'La profe Dina te daba clases de...' },
                     "Alfonso Rodríguez": { password: 'Maria', hint: '¿Como te llamas?' },
                     "Rosamaria Farrer": { password: 'Abuela', hint: '¿Soy la...de victor?' },
@@ -641,12 +641,12 @@
                     "Tía Genny": { password: 'Mi Galletica Can Can', hint: '¿Tía Genny te dice Mi Galletica Can Can o Sobrinita Linda?' },
                     "Luismi": { password: 'PAPA', hint: 'Como nos llamamos el uno al otro...' },
                     "Anel": { password: 'Katty', hint: '¿Como se llamaba la última novia de Anel?' },
-                    "Tío Luchi": { password: 'TIITO', hint: '¿Como me llamas tú cariñosamente?' },
+                    "Tío Luchi": { password: 'Kevin', hint: '¿El hijo de tío Luchi se llama Kevin o Pedro?' },
                     "Papá": { password: 'Tenis y Boxeo', hint: 'Los deportes que papá practica habitualmente son Tenis y Boxeo o Voleibol y Béisbol' },
-                    "Tía Ingrid": { password: 'Salgar', hint: 'Tía Ingrid tiene una casa en la playa en donde la has visitado en...' },
+                    "Tía Ingrid": { password: 'Las Playas de Salgar', hint: '¿Tía Ingrid vive en Las Playas de Salgar o en Bogotá?' },
                     "Mami": { password: 'Mi Chiquitina hermosa', hint: 'Te llamio Mi Chiquitina hermosa o Mi princesa bella' },
-                    "Beverly y familia": { password: 'Las Negritas Puloys', hint: ' Beverly es bailarina del grupo folklórico...' },
-                    "Darlys": { password: 'baja', hint: '¿Darlys es de estatura muy alta o muy baja?' },
+                    "Beverly y familia": { password: 'Las Negritas  Puloys', hint: ' ¿Beverly es bailarina del grupo folklórico Las Negritas Puloys o del grupo Flamenco Fusión?' },
+                    "Darlys": { password: 'muy baja', hint: '¿Darlys es de estatura muy alta o muy baja?' },
                     "Alejo y Katha": { password: 'Universidad Del Desarrollo', hint: 'Alejo y Katha se conocieron en Chile, en la Universidad Adolfo Ibáñez o la Universidad Del Desarrollo' },
                     "Sebas Nordewier": { password: 'Londres', hint: '¿Es tu primo que estudia en Utrecht (Países Bajos ) y que nació en Londres o en Amsterdam?' },
                     "Daniela Ortega y familia": { password: 'Malta', hint: 'Es tu prima que vive en Croacia o Malta?' },
@@ -661,7 +661,7 @@
                     "Jorge Tapia": { password: 'Simón', hint: 'Es un querido amigo de mamá y papá, cuyo hijo se llama Simón o Pedro?' },
                     "Jorge Santiago": { password: 'chilena', hint: 'Es una amigo de mamá de nacionalidad brasilera o chilena?' },
                     "Mónica Arrieta": { password: 'Daniel Rincón', hint: 'Es una amiga colombiana de mamá cuya hijo se llama Daniel Rincón o Pablo Rincón' },
-                    "Prima Lissette Ramos": { password: 'Los Ángeles', hint: 'La prima Lisette vive en...' },
+                    "Prima Lissette Ramos": { password: 'Estados Unidos', hint: '¿La prima Lissette vive en Estados Unidos o en Argentina?' },
                     "Amiga Patricia Guevara": { password: 'Javier Quiroz', hint: 'Es una amiga peruana de mamá que es sobrina del chileno Jorge Tapia o  Javier Quiroz?' },
                     "Javier Quiroz": { password: 'Chicha Morada', hint: 'El primer refresco de origen peruano que Javier Quiroz te brindó en La Vega Central cuando te conoció estando pequeña, fue Chicha Morada o Inka Kola' },
                     "Dr. Ricardo Jorquera": { password: 'la rodilla de la pierna izquierda', hint: 'Te opero del brazo izquierdo o de la rodilla de la pierna izquierda?' },
@@ -669,7 +669,7 @@
                     "Tía Norbely": { password: 'Luisfer', hint: 'Tía Norbely es la mamá de tu primo...' },
                     "Erik Helbek": { password: 'marica', hint: '¿Como nos llamamos?' },
                     "Tía Mariela": { password: 'menor', hint: '¿Tía Mariela es la hermana mayor o menor de mamá?' },
-                    "Tío Fer": { password: 'Junior de Barranquilla', hint: 'Tío Fer es fanático a morir del equipo...' },
+                    "Tío Fer": { password: 'Tía Norbely', hint: '¿Tío Fer es el esposo de la Tía Norbely o de la Tía Genny?' },
                     "Familia Gómez Ahumada": { password: 'Huechuraba', hint: 'La comuna en donde viven el compadre Marcelo y la comadre Osiris con sus hijas, es Providencia o Huechuraba' },
                     "Mario Meza": { password: 'mamá', hint: ' Es un querido amigo chileno de papá o mamá?' },
                     "Guillermo Talep y Ximena López": { password: 'conejo', hint: ' La mascota que, estando pequeña, Guillermo te ayudó a encontrar en el jardín de nuestra primera casa en Santiago, fue un gato o un conejo?' },
