--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                 // Diccionario de las contraseñas y pistas de cada nombre
                 const passwordsAndHints = {
                     "Daniela Rodriguez": { password: 'Je suis colombienne', hint: 'Frase que aprendimos en la clase de francés y no paramos de decir' },
-                    "Berni": { password: 'esquizofrenia', hint: 'enfermedad mental que ambas padecemos empieza con e' },
+                    "Berni": { password: 'esquizofrenia', hint: 'enfermedad mental que ambas padecemos, empieza con e' },
                     "Fran y Dani": { password: 'barbies negras', hint: '¿como se llama nuestro grupo?' },
                     "Samu": { password: '<4', hint: 'al momento del fallo “<3”' },
                     "Noah Vera": { password: 'demure', hint: 'si somos muy cutesy somos muy … ' },
