--- a/index.html
+++ b/index.html
@@ -56,13 +56,11 @@
 }
 
 .password-container input {
-    width: 100%;
-    padding-right: 40px; /* Espacio para el icono */
-    padding: 1.04vw;
-    margin: 1.04vw 0;
-    border: 0.1vw solid #ccc;
-    border-radius: 0.52vw;
-    box-sizing: border-box;
+    width: 25vw;
+            padding: 1.04vw;
+            margin: 1.04vw 0;
+            border: 0.1vw solid #ccc;
+            border-radius: 0.52vw;
 }
 
 .password-container .toggle-password {
