--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             margin: 1.04vw 0;
             border: 0.1vw solid #ccc;
             border-radius: 0.52vw;
+            font-size: 4vw; 
         }
         
         .modal-content button {
@@ -65,7 +66,7 @@
             margin: 1.04vw 0;
             border: 0.1vw solid #ccc;
             border-radius: 0.52vw;
-            box-sizing: border-box; /* Asegura que el padding y el borde se incluyan en el ancho total */
+            box-sizing: border-box; 
         }
         
         .password-container .toggle-password {
