--- a/index.html
+++ b/index.html
@@ -758,16 +758,15 @@
 
     // Función para verificar la contraseña ingresada
     function checkPassword() {
-        const userPassword = document.getElementById('userPassword').value;
-        const modal = document.getElementById('passwordModal');
-        if (userPassword && userPassword.toLowerCase() === passwordsAndHints[currentName].password.toLowerCase()) {
-            // Redirigir si la contraseña es correcta
-            window.location.href = `${currentName.toLowerCase()}.html`;
-        } else {
-            alert('Contraseña incorrecta');
-        }
-        modal.style.display = 'none'; // Ocultar el modal
-    }
+  const userPassword = document.getElementById('userPassword').value.trim().toLowerCase();
+  const storedPassword = passwordsAndHints[currentName].password.trim().toLowerCase();
+  if (userPassword && userPassword === storedPassword) {
+      window.location.href = `${currentName.toLowerCase()}.html`;
+  } else {
+      alert('Contraseña incorrecta');
+  }
+  modal.style.display = 'none';
+}
 
     // Cerrar el modal si el usuario hace clic fuera de él
     window.onclick = function(event) {
